Added Page Indicator

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -17,7 +17,9 @@
             android:text="Notifications"
             android:textSize="30dp"
             android:textColor="@color/white"/>
-
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></ListView>
     </RelativeLayout>
 
 </FrameLayout>
