--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="pureBlack">#000</color>
     <color name="white">#fff</color>
+    <color name="gray">#bcbcbc</color>
 </resources>
