--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,20 +49,21 @@
             >
 
             <ImageButton
+
                 android:id="@+id/app1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="40dp"
                 android:scaleType="centerInside"
                 android:background="@null"
+                android:layout_weight="4"
                 android:onClick="selector"
                 android:src="@drawable/ic_add_black_24dp" />
 
             <ImageButton
                 android:id="@+id/app2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_weight="4"
                 android:scaleType="centerInside"
                 android:background="@null"
                 android:onClick="selector"
@@ -72,8 +73,8 @@
             <ImageButton
                 android:id="@+id/app3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_weight="4"
                 android:scaleType="centerInside"
                 android:background="@null"
                 android:onClick="selector"
@@ -83,15 +84,22 @@
             <ImageButton
                 android:id="@+id/app4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="40dp"
                 android:scaleType="centerInside"
+                android:layout_weight="4"
                 android:background="@null"
                 android:onClick="selector"
                 android:src="@drawable/ic_add_black_24dp"
                 />
-        </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
 
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</RelativeLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="removeall apps"
+        android:onClick="clicko"/>
 </FrameLayout>
