--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,7 +36,7 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:background="@drawable/circle"
-                    android:src="@drawable/ic_signal_wifi_0_bar_black_24dp"
+                    android:src="@drawable/ic_signal_wifi_4_bar_black_24dp"
                     />
             </LinearLayout>
             <LinearLayout
@@ -48,7 +48,43 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:background="@drawable/circle"
-                    android:src="@drawable/ic_add_black_24dp"
+                    android:src="@drawable/ic_bluetooth_black_24dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/circle"
+                    android:src="@drawable/ic_screen_rotation_black_24dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/circle"
+                    android:src="@drawable/ic_airplanemode_active_black_24dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/circle"
+                    android:src="@drawable/ic_signal_cellular_4_bar_black_24dp"
                     />
             </LinearLayout>
         </LinearLayout>
