--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,12 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_above="@+id/pageIndicatorView"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+        <!--android:layout_above="@+id/pageIndicatorView"-->
+
+
+<!--
     <com.rd.PageIndicatorView
         android:id="@+id/pageIndicatorView"
         android:layout_width="wrap_content"
@@ -31,4 +34,5 @@
         app:piv_unselectedColor="@color/gray"
         app:piv_viewPager="@id/fragment_container"
         />
+        -->
     </RelativeLayout>
